[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SampleListReader"
version = "0.0.1"
authors = [
  { name="David Caldwell", email="dcaldwell3@uams.edu" },
]
dependencies = [
    "pandas",
    "openpyxl"
]
description = "Reads IDeA Sample Lists"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"